# disco-addon-postgres

./: Dockerfile  README.md  addoncgi.py  alembic.ini  db_add.py  disco.json  keyvaluestore.py  postgres.json  pyproject.toml  requirements.in  requirements.txt  storeutils.py  utils.py
addon/: api.py  cgi.py  config.py  context.py  deploy.py  disco.py  exchandler.py  keyvalues.py  keyvaluestore.py  misc.py  postgres.py  storage.py
addon/alembic/: env.py
addon/alembic/versions/: 01f55269072f_1_1_0_b.py  53fa126b65b8_1_0_0.py  d49d80339efd_1_1_0_a.py
addon/endpoints/: addon.py  attachments.py  databases.py  instances.py  tunnels.py
addon/models/: __init__.py  attachment.py  database.py  db.py  instance.py  keyvalue.py  meta.py  user.py
