[project]
name = "disco-addon-postgres"
dynamic = ["version"]

[tool.setuptools]
packages = ["addon"]

[tool.setuptools.dynamic]
version = {attr = "addon.__version__"}

[project.scripts]
addon_cgi = "addon.cgi:main"
addon_deploy = "addon.deploy:main"

[tool.ruff.lint]
# Enable the isort rules.
extend-select = ["I"]

[tool.mypy]
ignore_missing_imports = true
